// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly in both cases of ownership I am not the owner 1`] = `
<Text>
   
  <br />
   
  Owner
  : 
  Iulia Mogos
  <br />
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
            Object {
              "color": "#000000ff",
            },
          ]
        }
      >
        Assign to me
      </Text>
    </View>
  </View>
</Text>
`;

exports[`Should render correctly in both cases of ownership I am the owner 1`] = `
<Text>
   
  <br />
   
  Owner
  : 
  Iulia Mogos
  <br />
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
            Object {
              "color": "#808080",
            },
          ]
        }
      >
        Iulia Mogos
      </Text>
    </View>
  </View>
</Text>
`;
